--- a/src/app/home/control-panel/user-group/user-group.component.scss
+++ b/src/app/home/control-panel/user-group/user-group.component.scss
@@ -22,6 +22,12 @@
 
   .group-actions {
     min-width: 100px;
+
+    .btn {
+      &:hover {
+        color: $secondary !important;
+      }
+    }
   }
 
   .scroll-pane {
