--- a/src/app/home/control-panel/user/bulk-import/bulk-import.component.html
+++ b/src/app/home/control-panel/user/bulk-import/bulk-import.component.html
@@ -10,7 +10,7 @@
         <div class="font-weight-bold font-16">List of Import Tasks</div>
         <button *ngIf="hasPermission('PMUBC')" type="button" class="add-new btn-min-width btn btn-dark"
             (click)="newUpload()">
-            <span class="fa fa-upload mr-2"></span>
+            <span class="dsi dsi-upload mr-2"></span>
             <span class="text">New Bulk Task</span>
         </button>
     </div>
