--- a/src/app/home/service-manager/service-manager.component.html
+++ b/src/app/home/service-manager/service-manager.component.html
@@ -15,7 +15,7 @@
         <span class="dsi dsi-settings text-secondary"></span>
       </button>
       <button type="button" class="btn btn-outline-light border ml-3" (click)="toggleImportWizard=true">
-        <span class="fa fa-upload text-secondary"></span>
+        <span class="dsi dsi-upload text-secondary"></span>
       </button>
       <button type="button" id="addNewDS" class="add-new btn btn-primary ml-3" (click)="newService()"
         *ngIf="hasCreatePermission('SM')">
