--- a/src/app/utils/change-password/change-password.component.html
+++ b/src/app/utils/change-password/change-password.component.html
@@ -10,37 +10,37 @@
       <input [type]="showPassword['old'] ? 'text' : 'password'" placeholder="Old password"
         class="form-control mb-3 input-eye" [ngClass]="{'is-invalid':oldPasswordRequired || oldPasswordLength}"
         formControlName="oldpassword" odpAutoFocus>
-      <span *ngIf="oldPasswordRequired" class="fas fa-question-circle position-absolute text-danger error-icon"
+      <span *ngIf="oldPasswordRequired" class="dsi dsi-danger-circle position-absolute text-danger error-icon"
         ngbTooltip="Old Password is required" container="body" placement="right"></span>
-      <span *ngIf="oldPasswordLength" class="fas fa-question-circle position-absolute text-danger error-icon"
+      <span *ngIf="oldPasswordLength" class="dsi dsi-danger-circle position-absolute text-danger error-icon"
         ngbTooltip="Password should be of at least 8 characters" container="body" placement="right"></span>
 
-      <span class="fas eye-icon position-absolute hover"
-        [ngClass]="{'fa-eye': !showPassword['old'],'fa-eye-slash': showPassword['old'] }"
+      <span class="dsi eye-icon position-absolute hover"
+        [ngClass]="{'dsi-view': !showPassword['old'],'dsi-hide': showPassword['old'] }"
         (click)="showPassword['old']= !showPassword['old']"></span>
     </div>
     <div class="input-wrapper position-relative mb-3">
       <input [type]="showPassword['new'] ? 'text' : 'password'" placeholder="New password"
         class="form-control input-eye" [ngClass]="{'is-invalid':newPasswordRequired || newPasswordLength}"
         formControlName="newpassword">
-      <span *ngIf="newPasswordRequired" class="fas fa-question-circle position-absolute text-danger error-icon"
+      <span *ngIf="newPasswordRequired" class="dsi dsi-danger-circle position-absolute text-danger error-icon"
         ngbTooltip="New Password is required" container="body" placement="right"></span>
-      <span *ngIf="newPasswordLength" class="fas fa-question-circle position-absolute text-danger error-icon"
+      <span *ngIf="newPasswordLength" class="dsi dsi-danger-circle position-absolute text-danger error-icon"
         ngbTooltip="Password should be of at least 8 characters" container="body" placement="right"></span>
-      <span class="fas eye-icon position-absolute hover"
-        [ngClass]="{'fa-eye': !showPassword['new'],'fa-eye-slash': showPassword['new'] }"
+      <span class="dsi eye-icon position-absolute hover"
+        [ngClass]="{'dsi-view': !showPassword['new'],'dsi-hide': showPassword['new'] }"
         (click)="showPassword['new']= !showPassword['new']"></span>
     </div>
     <div class="input-wrapper position-relative">
       <input [type]="showPassword['confirm'] ? 'text' : 'password'" placeholder="Re-enter new password"
         class="form-control input-eye" [ngClass]="{'is-invalid':cnfrmPasswordRequired || matchPwd}"
         formControlName="confirmpassword">
-      <span *ngIf="cnfrmPasswordRequired" class="fas fa-question-circle position-absolute text-danger error-icon"
+      <span *ngIf="cnfrmPasswordRequired" class="dsi dsi-danger-circle position-absolute text-danger error-icon"
         ngbTooltip="Confirm Password is required" container="body" placement="right"></span>
-      <span *ngIf="matchPwd" class="fas fa-question-circle position-absolute text-danger error-icon"
+      <span *ngIf="matchPwd" class="dsi dsi-danger-circle position-absolute text-danger error-icon"
         ngbTooltip="Passwords are not matching" container="body" placement="right"></span>
-      <span class="fas eye-icon position-absolute hover"
-        [ngClass]="{'fa-eye': !showPassword['confirm'],'fa-eye-slash': showPassword['confirm'] }"
+      <span class="dsi eye-icon position-absolute hover"
+        [ngClass]="{'dsi-view': !showPassword['confirm'],'dsi-hide': showPassword['confirm'] }"
         (click)="showPassword['confirm']= !showPassword['confirm']"></span>
     </div>
     <p class="text-danger my-2 text-center">{{message}}&nbsp;</p>
