--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -44,7 +44,7 @@
       </div>
       <div class="d-flex align-items-center mr-3">
         <!-- <button type="button" class="btn btn-link font-13" (click)="downloadIEG()">
-          <span class="fa fa-download"></span>
+          <span class="dsi dsi-download"></span>
           <span class="ml-2">Edge Agent</span>
         </button> -->
       </div>
