--- a/src/app/admin/user-list/user-manage/user-manage.component.html
+++ b/src/app/admin/user-list/user-manage/user-manage.component.html
@@ -89,15 +89,15 @@
         <label class="text-secondary modal-label" for="new-pwd">New Password</label>
         <input id="new-pwd" class="form-control password-input" [type]="showPassword['new'] ? 'text' : 'password'"
           formControlName="password" [ngClass]="{'is-invalid': invalidPassword}" odpAutoFocus>
-        <span class="fas fa-question-circle text-danger error-icon-password position-absolute" *ngIf="invalidPassword"
+        <span class="dsi dsi-danger-circle text-danger error-icon-password position-absolute" *ngIf="invalidPassword"
           ngbTooltip="This is a required field" placement="right"></span>
-        <span class="fas eye-icon position-absolute hover"
-          [ngClass]="{'fa-eye': !showPassword['new'],'fa-eye-slash': showPassword['new'] }"
+        <span class="dsi eye-icon position-absolute hover"
+          [ngClass]="{'dsi-view': !showPassword['new'],'dsi-hide': showPassword['new'] }"
           (click)="showPassword['new']= !showPassword['new']"></span>
-        <span class="fas fa-question-circle text-danger error-icon-password position-absolute"
+        <span class="dsi dsi-danger-circle text-danger error-icon-password position-absolute"
           *ngIf="resetPasswordForm.get('password').dirty && resetPasswordForm.get('password').hasError('minlength')"
           [ngbTooltip]="'Password should be minimum 8 chars long'" ccontainer="body" placement="right"></span>
-        <span class="fas fa-question-circle text-danger error-icon-password position-absolute"
+        <span class="dsi dsi-danger-circle text-danger error-icon-password position-absolute"
           *ngIf="resetPasswordForm.get('password').dirty && resetPasswordForm.get('password').hasError('pattern')"
           [ngbTooltip]="'Password must have one of following - Uppercase(A - Z), Lowercase(a - z), Special characters (!@#$%^&*?~) and Numbers (0 - 9)'"
           ccontainer="body" placement="right"></span>
@@ -106,12 +106,12 @@
         <label class="text-secondary modal-label" for="c-pwd">Confirm Password</label>
         <input [type]="showPassword['confirm'] ? 'text' : 'password'" id="c-pwd" class="form-control password-input"
           formControlName="cpassword" [ngClass]="{'is-invalid': invalidCPassword || invalidMatch}">
-        <span class="fas fa-question-circle text-danger error-icon-password position-absolute" *ngIf="invalidCPassword"
+        <span class="dsi dsi-danger-circle text-danger error-icon-password position-absolute" *ngIf="invalidCPassword"
           ngbTooltip="This is a required field" placement="right"></span>
-        <span class="fas fa-question-circle text-danger error-icon-password position-absolute" *ngIf="invalidMatch"
+        <span class="dsi dsi-danger-circle text-danger error-icon-password position-absolute" *ngIf="invalidMatch"
           ngbTooltip="Passwords do not match" placement="right"></span>
-        <span class="fas eye-icon position-absolute hover"
-          [ngClass]="{'fa-eye': !showPassword['confirm'],'fa-eye-slash': showPassword['confirm'] }"
+        <span class="dsi eye-icon position-absolute hover"
+          [ngClass]="{'dsi-view': !showPassword['confirm'],'dsi-hide': showPassword['confirm'] }"
           (click)="showPassword['confirm']= !showPassword['confirm']"></span>
       </div>
     </form>
