--- a/src/app/home/faas/faas-listing/faas-listing.component.html
+++ b/src/app/home/faas/faas-listing/faas-listing.component.html
@@ -22,9 +22,9 @@
 </div>
 
 <div *ngIf="showNewFaasWindow" class="overlay position-fixed"></div>
-<div class="new-faas-window p-4 position-fixed border-left bg-white" [ngClass]="{'show': showNewFaasWindow}" [formGroup]="form">
+<div class="new-faas-window p-4 position-fixed border-left bg-white d-flex flex-column" [ngClass]="{'show': showNewFaasWindow}" [formGroup]="form">
   <div class="d-flex align-items-center justify-content-between">
-    <h5 class="m-0">New Function</h5>
+    <h5 class="m-0 font-20 fw-600">New Function</h5>
     <button type="button" class="close" (click)="showNewFaasWindow=false">
       <span>&times;</span>
     </button>
@@ -71,8 +71,8 @@
       </div>
     </div>
   </div>
-  <div class="d-flex align-self-end justify-content-end w-100 mt-4">
-    <button type="button" class="btn btn-primary btn-min-width" id="newFaasModalYes" [disabled]="form.invalid"
+  <div class="d-flex align-self-end justify-content-end w-100 mt-auto">
+    <button type="button" class="btn btn-primary w-100" id="newFaasModalYes" [disabled]="form.invalid"
       (click)="triggerFaasCreate()">Create</button>
   </div>
 </div>
