--- a/src/app/home/global-schemas/global-schemas.component.html
+++ b/src/app/home/global-schemas/global-schemas.component.html
@@ -32,9 +32,9 @@
             <input *ngIf="edit.status" type="text" class="form-control pr-4" formControlName="name" id="sbName"
                 placeholder="Untitled library" [ngClass]="{'is-invalid': libNameErr}" #libName odpAutoFocus>
             <span *ngIf="!edit.status" class="text-dark">{{form.get('name').value}}</span>
-            <span class="fas fa-question-circle text-danger text-danger position-absolute field-error-symbol" *ngIf="form.get('name').dirty && form.get('name').hasError('required')"
+            <span class="dsi dsi-danger-circle text-danger text-danger position-absolute field-error-symbol" *ngIf="form.get('name').dirty && form.get('name').hasError('required')"
                 ngbTooltip="You cannot leave this blank" placement="right"></span>
-            <span class="fas fa-question-circle text-danger text-danger position-absolute field-error-symbol" *ngIf="form.get('name').dirty && form.get('name').hasError('length')"
+            <span class="dsi dsi-danger-circle text-danger text-danger position-absolute field-error-symbol" *ngIf="form.get('name').dirty && form.get('name').hasError('length')"
                 ngbTooltip="Name should be less than 40 characters" placement="right"></span>
         </div>
         
