--- a/src/app/home/profile/profile.component.html
+++ b/src/app/home/profile/profile.component.html
@@ -47,7 +47,7 @@
                             <div class="input-group">
                                 <input [type]="cp ? 'text' : 'password'" class="form-control" formControlName="oldpassword">
                                 <span class="input-group-addon" (click)="cp=!cp">
-                                    <span class="fa" [ngClass]="{'fa-eye-slash':cp,'fa-eye':!cp}"></span>
+                                    <span class="dsi" [ngClass]="{'dsi-hide':cp,'dsi-view':!cp}"></span>
                                 </span>
                             </div>
                         </div>
@@ -56,7 +56,7 @@
                             <div class="input-group">
                                 <input [type]="np ? 'text' : 'password'" class="form-control" formControlName="newpassword">
                                 <span class="input-group-addon" (click)="np=!np">
-                                    <span class="fa" [ngClass]="{'fa-eye-slash':np,'fa-eye':!np}"></span>
+                                    <span class="dsi" [ngClass]="{'dsi-hide':np,'dsi-view':!np}"></span>
                                 </span>
                             </div>
                         </div>
@@ -65,7 +65,7 @@
                             <div class="input-group">
                                 <input [type]="cfp ? 'text' : 'password'" class="form-control" formControlName="confirmpassword">
                                 <span class="input-group-addon" (click)="cfp=!cfp">
-                                    <span class="fa" [ngClass]="{'fa-eye-slash':cfp,'fa-eye':!cfp}"></span>
+                                    <span class="dsi" [ngClass]="{'dsi-hide':cfp,'dsi-view':!cfp}"></span>
                                 </span>
                             </div>
                             <small class="text-danger" *ngIf="passwordForm.controls.confirmpassword.touched && passwordForm.controls.confirmpassword.hasError('match')">Passwords do not match</small>
