--- a/src/app/utils/basic-info/basic-info.component.html
+++ b/src/app/utils/basic-info/basic-info.component.html
@@ -5,7 +5,7 @@
         <input *ngIf="enableEdit" type="text" class="form-control input-width" [ngModel]="name"
           (ngModelChange)="onNameChange($event)" odpClickOutside (outside)="enableEdit=false" odpAutoFocus>
         <ng-container *ngIf="!enableEdit">
-          <h4 class="name m-0">{{name}}</h4>
+          <h4 class="name m-0 font-22 w-600">{{name}}</h4>
           <span *ngIf="edit.status" class="edit-icon dsi dsi-edit ml-2 ignore-outside hover" (click)="enableEdit=true"></span>
         </ng-container>
       </div>
