--- a/src/app/utils/structure-field/structure-field.component.html
+++ b/src/app/utils/structure-field/structure-field.component.html
@@ -24,7 +24,7 @@
                     (paste)="pasteOnField($event)" [attr.placeholder]="placeholder" [attr.id]="fieldId"
                     [ngClass]="{'form-control-plaintext':!active,'form-control':active, 'is-invalid pl-2': hasError}"
                     odpKeyStrokes (shift.enter)="addField(true)">
-                <span class="fas fa-question-circle text-danger position-absolute error-icon" *ngIf="hasError"
+                <span class="dsi dsi-danger-circle text-danger position-absolute error-icon" *ngIf="hasError"
                     [ngbTooltip]="validationError" placement="right"></span>
                 <span class="fa fa-spinner fa-pulse position-absolute searching-relation"
                     *ngIf="searchingRelation"></span>
